[gd_scene load_steps=7 format=3]

[ext_resource type="FontFile" path="res://Fonts/Bahnschrift/bahn.tres" id="1"]
[ext_resource type="FontFile" uid="uid://ddsw7a4p66evb" path="res://Fonts/Bahnschrift/bahnschrift.ttf" id="2"]
[ext_resource type="Script" path="res://Scenes/Prefabs/UI/Scripts/CombatCard.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://cjbt7c2k2qkdt" path="res://Scenes/Components/UI/HealthBar.tscn" id="4"]


[sub_resource type="FontFile" id=1]
resource_name = "bahn"
size = 24
use_mipmaps = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.854902, 0.780392, 0.478431, 1 )

[node name="Combat Card" type="Control" groups=[
"combat_card",
]]
anchor_right = 0.4
anchor_bottom = 0.1
offset_right = -9.60001
offset_bottom = 20.0
custom_minimum_size = Vector2( 400, 80 )
script = ExtResource( 3 )

[node name="NamePanel" type="Panel" parent="."]
anchor_right = 0.6
anchor_bottom = 0.8
offset_right = 0.00498962
offset_bottom = 0.0409889
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="NamePanel"]
anchor_left = 0.025
anchor_top = 0.05
anchor_right = 0.975
anchor_bottom = 0.5
theme_override_fonts/normal_font = ExtResource( 1 )
text = "taylor my lovetaylor my love"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="RichTextLabel" parent="NamePanel"]
anchor_left = 0.025
anchor_top = 0.5
anchor_right = 0.3
anchor_bottom = 0.95
theme_override_fonts/normal_font = SubResource( 1 )
theme_override_colors/default_color = Color( 0.992157, 0.960784, 0.0392157, 1 )
text = "Lv. 14"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" parent="." instance=ExtResource( 4 )]

[node name="ActionPanel" type="Panel" parent="."]
anchor_left = 0.61
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.7
theme_override_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prepped" type="RichTextLabel" parent="ActionPanel"]
anchor_left = 0.543
anchor_top = 0.6
anchor_right = 0.975
anchor_bottom = 0.99
theme_override_fonts/normal_font = ExtResource( 1 )
text = "Prepped!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action" type="RichTextLabel" parent="ActionPanel"]
anchor_left = 0.025
anchor_top = 0.05
anchor_right = 0.975
anchor_bottom = 0.6
theme_override_fonts/normal_font = SubResource( 1 )
theme_override_colors/default_color = Color( 0.552941, 0.329412, 0.129412, 1 )
text = "Basic Attack"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
